Working on scroll effect for image carousel

--- a/src/Components/ImgCarousel/ImgCarousel.module.css
+++ b/src/Components/ImgCarousel/ImgCarousel.module.css
@@ -3,7 +3,7 @@
     color: white;
 }
 
-.img{
-    width: 207px;
-    height: 313px;
+.image-carousel > .row{
+    overflow-x: auto;
+    flex-wrap: nowrap;
 }
