--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,23 +1,6 @@
-
+.container-fluid{
+    padding: 0;
+}
 .header{
-    margin: 50px 0;
-}
-
-.title{
-    display: inline;
-    color: white;
-}
-
-.input{
-    float: right;
-    border: none;
-    background-color: #ECEDF8;
-    border-radius: 5px;
-    width: 365px;
-    height: 35px;
-    padding-left: 10px;
-}
-
-.input:focus{
-    outline: none;
+    margin-bottom: 50px;
 }
