--- a/src/Components/Details/FavBtn/FavBtn.module.css
+++ b/src/Components/Details/FavBtn/FavBtn.module.css
@@ -5,4 +5,9 @@
     box-sizing: border-box;
     border-radius: 10px;
     font-size: 18px;
+    transition: 0.2s;
+    }
+    .favouritebtn:hover{
+    background-color: #F5CA37;
+    color: #161924;
     }
