--- a/src/Container/Details/Details.module.css
+++ b/src/Container/Details/Details.module.css
@@ -3,11 +3,6 @@
     justify-content: space-between;
 } 
 
-/* .details{
-    display: flex;
-    justify-content: space-between;
-}  */
-
 .backbtn{
 background: #FFFFFF;
 border: 3px solid #FFFFFF;
@@ -15,8 +10,13 @@ box-sizing: border-box;
 border-radius: 5px;
 font-size: 18px;
 margin-bottom: 10px;
+transition: 0.2s;
 }
 
+.backbtn:hover{
+    background-color: #161924;
+    color: #FFFFFF;
+}
 
 
 
