Added spacing to Homepage & details page

--- a/src/Components/Details/FavBtn/FavBtn.module.css
+++ b/src/Components/Details/FavBtn/FavBtn.module.css
@@ -6,6 +6,7 @@
     border-radius: 10px;
     font-size: 18px;
     transition: 0.2s;
+    margin-right: 10px;
     }
     .favouritebtn:hover{
     background-color: #F5CA37;
