--- a/src/Components/Home/ImgCarousel/Movie/Movie.module.css
+++ b/src/Components/Home/ImgCarousel/Movie/Movie.module.css
@@ -2,3 +2,9 @@
     width: 207px;
     height: 313px;
 }
+
+.img:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
