Disabled favbtn on click

--- a/src/Components/Details/FavBtn/FavBtn.module.css
+++ b/src/Components/Details/FavBtn/FavBtn.module.css
@@ -12,3 +12,8 @@
     background-color: #F5CA37;
     color: #161924;
     }
+
+    .favouritebtn:disabled{
+    background-color:#F5CA37;
+    color: #161924;
+    }
