--- a/src/Components/Home/ImgCarousel/Favourites/Favourites.module.css
+++ b/src/Components/Home/ImgCarousel/Favourites/Favourites.module.css
@@ -1,4 +1,32 @@
 .img{
+    display: block;
     width: 207px;
     height: 313px;
+}
+
+.image-container {
+	position: relative;
+	transition: transform 0.2s;
+}
+
+.img:hover {
+	cursor: pointer;
+	transform: scale(1.1);
+}
+
+.img:hover .overlay {
+	opacity: 1;
+}
+
+.overlay {
+	position: absolute;
+	background: rgba(0, 0, 0, 0.8);
+    color: white;
+	width: 100%;
+	transition: 0.5s ease;
+	opacity: 0;
+	bottom: 0;
+	font-size: 20px;
+	padding: 20px;
+	text-align: center;
 }
